--- a/app/src/main/res/layout/activity_add_happy_place.xml
+++ b/app/src/main/res/layout/activity_add_happy_place.xml
@@ -37,7 +37,8 @@
                 android:layout_height="wrap_content"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent">
+                app:layout_constraintTop_toTopOf="parent"
+                >
 
                 <androidx.appcompat.widget.AppCompatEditText
                     android:id="@+id/et_title"
@@ -83,7 +84,8 @@
                     android:id="@+id/et_date"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
                     android:hint="@string/edit_text_hint_date"
                     android:inputType="text"
                     android:textColor="@color/primary_text_color"
