--- a/app/src/main/res/layout/activity_add_happy_place.xml
+++ b/app/src/main/res/layout/activity_add_happy_place.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".AddHappyPlaceActivity">
+    tools:context=".activities.AddHappyPlaceActivity">
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/tbAddPlace"
         android:layout_width="match_parent"
@@ -48,7 +48,8 @@
                     android:inputType="textCapWords"
                     android:textColor="@color/primary_text_color"
                     android:textColorHint="@color/secondary_text_color"
-                    android:textSize="@dimen/edit_text_text_size" />
+                    android:textSize="@dimen/edit_text_text_size"
+                    />
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
@@ -106,7 +107,8 @@
                     android:id="@+id/et_location"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-
+                    android:focusable="false"
+                    android:focusableInTouchMode="false"
                     android:hint="@string/edit_text_hint_location"
                     android:inputType="text"
                     android:textColor="@color/primary_text_color"
