--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="colorPrimary">#4b86b4</color>
+    <color name="colorSearch">#bc214b</color>
     <color name="colorPrimaryDark">#2a4d69</color>
     <color name="colorAccent">#adcbe3</color>
 
@@ -20,4 +21,7 @@
     <color name="item_happy_place_description_text_color">#606060</color>
 
     <color name="detail_screen_description_text_color">#757575</color>
+    <color name="swipe_edit">#24AE05</color>
+    <color name="swipe_delete">#F44336</color>
+
 </resources>
